// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewSharingModal/> render() should render as private 1`] = `
<Modal
  autoFocus={true}
  backdrop={true}
  backdropTransition={
    Object {
      "mountOnEnter": true,
      "timeout": 150,
    }
  }
  centered={false}
  container="body"
  fade={true}
  isOpen={true}
  keyboard={true}
  modalTransition={
    Object {
      "timeout": 300,
    }
  }
  onClosed={[Function]}
  onOpened={[Function]}
  returnFocusAfterClose={true}
  role="dialog"
  scrollable={false}
  toggle={[MockFunction]}
  trapFocus={false}
  unmountOnClose={true}
  zIndex={1050}
>
  <ModalHeader
    charCode={215}
    closeAriaLabel="Close"
    tag="h5"
    toggle={[MockFunction]}
    wrapTag="div"
  >
    Update view sharing: 
    <b />
  </ModalHeader>
  <ModalBody
    className="p-0"
    tag="div"
  >
    <Connect(ViewSharingModalBodyContainer)
      error={null}
      initialTeams={Immutable.List []}
      initialUsers={Immutable.List []}
      isLoading={true}
      onRemoveTeam={[Function]}
      onRemoveUser={[Function]}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      selectedTeams={Immutable.List []}
      selectedUsers={Immutable.List []}
      setVisibility={[Function]}
      visibility="private"
    />
  </ModalBody>
  <ModalFooter
    tag="div"
  >
    <ForwardRef
      className="submit"
      id="view-sharing-submit"
      isDisabled={true}
      onClick={[Function]}
    >
      Update view sharing
    </ForwardRef>
    <ForwardRef
      intent="secondary"
      onClick={[MockFunction]}
    >
      Cancel
    </ForwardRef>
  </ModalFooter>
</Modal>
`;

exports[`<ViewSharingModal/> render() should render as public 1`] = `
<Modal
  autoFocus={true}
  backdrop={true}
  backdropTransition={
    Object {
      "mountOnEnter": true,
      "timeout": 150,
    }
  }
  centered={false}
  container="body"
  fade={true}
  isOpen={true}
  keyboard={true}
  modalTransition={
    Object {
      "timeout": 300,
    }
  }
  onClosed={[Function]}
  onOpened={[Function]}
  returnFocusAfterClose={true}
  role="dialog"
  scrollable={false}
  toggle={[MockFunction]}
  trapFocus={false}
  unmountOnClose={true}
  zIndex={1050}
>
  <ModalHeader
    charCode={215}
    closeAriaLabel="Close"
    tag="h5"
    toggle={[MockFunction]}
    wrapTag="div"
  >
    Update view sharing: 
    <b />
  </ModalHeader>
  <ModalBody
    className="p-0"
    tag="div"
  >
    <Connect(ViewSharingModalBodyContainer)
      error={null}
      initialTeams={Immutable.List []}
      initialUsers={Immutable.List []}
      isLoading={true}
      onRemoveTeam={[Function]}
      onRemoveUser={[Function]}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      selectedTeams={Immutable.List []}
      selectedUsers={Immutable.List []}
      setVisibility={[Function]}
      visibility="public"
    />
  </ModalBody>
  <ModalFooter
    tag="div"
  >
    <ForwardRef
      className="submit"
      id="view-sharing-submit"
      isDisabled={true}
      onClick={[Function]}
    >
      Update view sharing
    </ForwardRef>
    <ForwardRef
      intent="secondary"
      onClick={[MockFunction]}
    >
      Cancel
    </ForwardRef>
  </ModalFooter>
</Modal>
`;

exports[`<ViewSharingModal/> render() should render as shared 1`] = `
<Modal
  autoFocus={true}
  backdrop={true}
  backdropTransition={
    Object {
      "mountOnEnter": true,
      "timeout": 150,
    }
  }
  centered={false}
  container="body"
  fade={true}
  isOpen={true}
  keyboard={true}
  modalTransition={
    Object {
      "timeout": 300,
    }
  }
  onClosed={[Function]}
  onOpened={[Function]}
  returnFocusAfterClose={true}
  role="dialog"
  scrollable={false}
  toggle={[MockFunction]}
  trapFocus={false}
  unmountOnClose={true}
  zIndex={1050}
>
  <ModalHeader
    charCode={215}
    closeAriaLabel="Close"
    tag="h5"
    toggle={[MockFunction]}
    wrapTag="div"
  >
    Update view sharing: 
    <b />
  </ModalHeader>
  <ModalBody
    className="p-0"
    tag="div"
  >
    <Connect(ViewSharingModalBodyContainer)
      error={null}
      initialTeams={Immutable.List []}
      initialUsers={Immutable.List []}
      isLoading={true}
      onRemoveTeam={[Function]}
      onRemoveUser={[Function]}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      selectedTeams={Immutable.List []}
      selectedUsers={Immutable.List []}
      setVisibility={[Function]}
      visibility="shared"
    />
  </ModalBody>
  <ModalFooter
    tag="div"
  >
    <ForwardRef
      className="submit"
      id="view-sharing-submit"
      isDisabled={true}
      onClick={[Function]}
    >
      Update view sharing
    </ForwardRef>
    <ForwardRef
      intent="secondary"
      onClick={[MockFunction]}
    >
      Cancel
    </ForwardRef>
  </ModalFooter>
  <UncontrolledTooltip
    placement="top"
    target="view-sharing-submit"
  >
    Please select at least one team or one user
  </UncontrolledTooltip>
</Modal>
`;
